--- a/_i18n_xliff/UnitedPizzaHelper Localizations/it.xcloc/Localized Contents/it.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/it.xcloc/Localized Contents/it.xliff
@@ -2225,21 +2225,12 @@ Retrieved</source>
         <note/>
       </trans-unit>
       <trans-unit id="app.language.restartRequired.description" xml:space="preserve">
-        <source>New UI language settings of an app on macOS / iOS always require the app to restart to make sure the new language setting becomes effective to it. Even if the user manually change this through System Settings, user will still be prompted the necessity of restarting the app, and it will be not this app but the macOS / iOS who prompts it.
+        <source>To apply these changes, the app needs to restart.
 
-We make this language switcher here to save users some seconds. This design is extremely ADHD-friendly since ADHD patients are likely to forgot what they are about to do while flipping among nested pages in iOS / macOS System Settings.
+This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
+        <target state="translated">Per applicare queste modifiche, l'app deve riavviarsi.
 
-This app will quit after you confirm this message.</source>
-        <target state="translated">Le nuove impostazioni della lingua dell'interfaccia utente di un'app su macOS / iOS richiedono sempre il riavvio dell'applicazione per garantire che la nuova impostazione della lingua diventi effettiva. Anche se l'utente modifica manualmente le impostazioni tramite le Impostazioni di Sistema, verrà comunque richiesto di riavviare l'app, e sarà macOS / iOS a fare questa richiesta, non questa app.
-
-Abbiamo creato questo selettore di lingua qui per risparmiare qualche secondo agli utenti. Questo design è estremamente adatto per chi soffre di ADHD poiché i pazienti ADHD sono propensi a dimenticare ciò che stavano per fare mentre navigano tra le pagine annidate nelle Impostazioni di Sistema di iOS / macOS.
-
-Questa app si chiuderà dopo che hai confermato questo messaggio.</target>
-        <note/>
-      </trans-unit>
-      <trans-unit id="app.language.restartRequired.widgets.description" xml:space="preserve">
-        <source>Some features, such as System Notifications, Widgets, etc., require restarting Springboard (on iOS) or logging out and back in (on macOS) to apply changes to this setting. If this feels complex, you may simply reboot your device instead. Note that already-scheduled system notifications may not reflect the latest app language change.</source>
-        <target state="translated">Alcune funzionalità, come le notifiche di sistema, i widget, ecc., richiedono il riavvio di Springboard (su iOS) o il logout e il successivo login (su macOS) per applicare le modifiche a questa impostazione. Se questo sembra complicato, puoi invece semplicemente riavviare il dispositivo. Nota che le notifiche di sistema già programmate potrebbero non riflettere l'ultima modifica della lingua dell'app.</target>
+Questo non si applica ai widget e alle notifiche programmate. Consulta le FAQ per i dettagli.</target>
         <note/>
       </trans-unit>
       <trans-unit id="dpv.characterInventory.navTitle" xml:space="preserve">
