--- a/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/de.xcloc/Localized Contents/de.xliff
@@ -2225,21 +2225,12 @@ Retrieved</source>
         <note/>
       </trans-unit>
       <trans-unit id="app.language.restartRequired.description" xml:space="preserve">
-        <source>New UI language settings of an app on macOS / iOS always require the app to restart to make sure the new language setting becomes effective to it. Even if the user manually change this through System Settings, user will still be prompted the necessity of restarting the app, and it will be not this app but the macOS / iOS who prompts it.
+        <source>To apply these changes, the app needs to restart.
 
-We make this language switcher here to save users some seconds. This design is extremely ADHD-friendly since ADHD patients are likely to forgot what they are about to do while flipping among nested pages in iOS / macOS System Settings.
+This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
+        <target state="translated">Um diese Änderungen anzuwenden, muss die App neu gestartet werden.
 
-This app will quit after you confirm this message.</source>
-        <target state="translated">Neue UI-Spracheinstellungen einer App auf macOS / iOS erfordern immer einen Neustart der App, um sicherzustellen, dass die neue Spracheinstellung wirksam wird. Selbst wenn der Benutzer dies manuell über die Systemeinstellungen ändert, wird dem Benutzer die Notwendigkeit angezeigt, die App neu zu starten, und es ist nicht diese App, sondern macOS / iOS, die dies anzeigt.
-
-Wir haben diesen Sprachumschalter hier erstellt, um den Benutzern einige Sekunden zu sparen. Dieses Design ist äußerst ADHS-freundlich, da ADHS-Patienten wahrscheinlich vergessen, was sie tun wollten, während sie zwischen verschachtelten Seiten in den Systemeinstellungen von iOS / macOS blättern.
-
-Diese App wird beendet, nachdem Sie diese Nachricht bestätigt haben.</target>
-        <note/>
-      </trans-unit>
-      <trans-unit id="app.language.restartRequired.widgets.description" xml:space="preserve">
-        <source>Some features, such as System Notifications, Widgets, etc., require restarting Springboard (on iOS) or logging out and back in (on macOS) to apply changes to this setting. If this feels complex, you may simply reboot your device instead. Note that already-scheduled system notifications may not reflect the latest app language change.</source>
-        <target state="translated">Einige Funktionen, wie Systembenachrichtigungen, Widgets usw., erfordern einen Neustart von Springboard (auf iOS) oder ein Ab- und Wiederanmelden (auf macOS), um Änderungen an dieser Einstellung anzuwenden. Wenn dies kompliziert erscheint, können Sie stattdessen Ihr Gerät einfach neu starten. Beachten Sie, dass bereits geplante Systembenachrichtigungen die neueste Änderung der App-Sprache möglicherweise nicht widerspiegeln.</target>
+Dies gilt nicht für Widget und geplante Benachrichtigungen. Weitere Details finden Sie in den FAQ.</target>
         <note/>
       </trans-unit>
       <trans-unit id="dpv.characterInventory.navTitle" xml:space="preserve">
