--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Localized Contents/ko.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Localized Contents/ko.xliff
@@ -2221,21 +2221,12 @@ Retrieved</source>
         <note/>
       </trans-unit>
       <trans-unit id="app.language.restartRequired.description" xml:space="preserve">
-        <source>New UI language settings of an app on macOS / iOS always require the app to restart to make sure the new language setting becomes effective to it. Even if the user manually change this through System Settings, user will still be prompted the necessity of restarting the app, and it will be not this app but the macOS / iOS who prompts it.
+        <source>To apply these changes, the app needs to restart.
 
-We make this language switcher here to save users some seconds. This design is extremely ADHD-friendly since ADHD patients are likely to forgot what they are about to do while flipping among nested pages in iOS / macOS System Settings.
+This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
+        <target state="translated">이러한 변경 사항을 적용하려면 앱을 재시작해야 합니다.
 
-This app will quit after you confirm this message.</source>
-        <target state="translated">macOS / iOS의 앱의 새로운 UI 언어 설정은 새로운 언어 설정이 유효해지도록 항상 앱을 다시 시작해야 합니다. 사용자가 시스템 설정을 통해 수동으로 변경하더라도 앱을 다시 시작해야 한다는 알림을 받게 되며, 이 알림은 이 앱이 아닌 macOS / iOS에서 뜹니다.
-
-우리는 사용자가 몇 초를 절약할 수 있도록 이 언어 전환기를 만듭니다. 이 디자인은 iOS / macOS 시스템 설정에서 여러 페이지를 넘기다가 하려던 일을 잊기 쉬운 ADHD 환자들에게 매우 친화적입니다.
-
-이 메시지를 확인한 후 이 앱은 종료됩니다.</target>
-        <note/>
-      </trans-unit>
-      <trans-unit id="app.language.restartRequired.widgets.description" xml:space="preserve">
-        <source>Some features, such as System Notifications, Widgets, etc., require restarting Springboard (on iOS) or logging out and back in (on macOS) to apply changes to this setting. If this feels complex, you may simply reboot your device instead. Note that already-scheduled system notifications may not reflect the latest app language change.</source>
-        <target state="translated">시스템 알림, 위젯 등과 같은 일부 기능은 이 설정 변경을 적용하기 위해 Springboard를 재시작해야 하거나(iOS의 경우), 로그아웃 후 다시 로그인해야 합니다(macOS의 경우). 이 과정이 복잡하게 느껴진다면, 대신 기기를 간단히 재부팅할 수도 있습니다. 단, 이미 예약된 시스템 알림은 앱 언어의 최신 변경 사항을 반영하지 않을 수 있습니다。</target>
+이것은 위젯 및 예약된 알림에는 적용되지 않습니다. 자세한 내용은 FAQ를 확인하세요.</target>
         <note/>
       </trans-unit>
       <trans-unit id="dpv.characterInventory.navTitle" xml:space="preserve">
